--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -13,23 +13,9 @@ body {
 	justify-content: center;
 }
 
-.heading {
-	line-height: 26px;
-	font-size: 36px;
-}
-
-.description {
-	font-size: 18px;
-	font-weight: 300;
-}
-
-.bold {
-	font-weight: 500;
-}
-
 .field {
 	width: 70%;
-	height: 60%;
+	height: 70%;
 
 	max-width: 800px;
 	min-width: 600px;
@@ -39,25 +25,58 @@ body {
 }
 
 .field__game {
+	position: relative;
 	display: block;
 }
 .game__information {
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	display: flex;
+	width: 50%;
+	justify-content: space-between;
+	padding: 10px 20px;
+
+	background-color: #fff;
+	opacity: 0.4;
+}
+
+.game__information .item {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	align-items: center;
+}
+
+.information__description {
+	font-size: 12px;
 }
 
 .game_wrapper {
-	width: 90%;
+	width: 80%;
 	margin: 0 auto;
+
+	display: flex;
+	flex-direction: column;
 }
 .game__header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 20px;
+	padding: 0 40px;
 
-	height: 200px;
-	margin: 0 auto;
+	width: 100%;
+	height: 150px;
+	margin: 80px auto;
 
 	color: #fff;
+
+	box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.game__header p:first-child {
+	font-size: 30px;
 }
 
 .game__header p:last-child {
@@ -66,11 +85,19 @@ body {
 
 .game__item {
 }
+
 .game__main {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	grid-auto-flow: row;
 	gap: 20px;
+}
+
+.game__main._grid12 {
+	grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+}
+.game__main._grid25 {
+	grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 
 .cardNumber {
@@ -83,6 +110,29 @@ body {
 	padding: 10px 20px;
 
 	cursor: pointer;
+}
+
+.progress-bar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	flex-flow: row nowrap;
+	gap: 3px;
+}
+
+.progress-bar_active {
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+	background-color: #000;
+}
+
+.progress-bar_passive {
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+	border: 1px solid black;
 }
 
 .field__game.close {
