--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,6 +14,8 @@ body {
 }
 
 .field {
+	position: relative;
+
 	width: 70%;
 	height: 70%;
 
@@ -133,14 +135,6 @@ body {
 	height: 10px;
 	border-radius: 100%;
 	border: 1px solid black;
-}
-
-.field__game.close {
-	display: none;
-}
-
-.start-menu.close {
-	display: none;
 }
 
 .start-menu {
