optimization \ add comment \ update struct project

--- a/src/assets/_modificators.css
+++ b/src/assets/_modificators.css
@@ -16,53 +16,12 @@
 	display: none;
 }
 
-@keyframes scale {
-	0% {
-		transform: scale(1.1);
-	}
-	50% {
-		transform: scale(0.7);
-	}
-
-	100% {
-		transform: scale(1.1);
-	}
-}
-
-@keyframes rotate {
-	0% {
-		transform: rotate(10deg);
-	}
-
-	50% {
-		transform: rotate(-10deg);
-	}
-
-	100% {
-		transform: rotate(10deg);
-	}
-}
-
-@keyframes opacity {
-	0% {
-		opacity: 1;
-	}
-
-	50% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
 .scale {
 	animation-duration: 0.8s;
 	animation-name: scale;
 	animation-iteration-count: infinite;
 }
-.rotate p {
+.rotate {
 	animation-duration: 0.6s;
 	animation-name: rotate;
 	animation-iteration-count: infinite;
