--- a/src/assets/_globalStyle.css
+++ b/src/assets/_globalStyle.css
@@ -16,12 +16,8 @@ body {
 .field {
 	position: relative;
 
-	width: 70%;
-	height: 70%;
-
-	max-width: 800px;
-	min-width: 600px;
-	min-height: 300px;
+	width: 900px;
+	height: 650px;
 
 	box-shadow: 0.5px 0.5px 10px 0.5px rgba(0, 0, 0, 0.2);
 }
