--- a/src/assets/_globalStyle.css
+++ b/src/assets/_globalStyle.css
@@ -5,8 +5,8 @@ body {
 }
 
 .root {
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
 
 	display: flex;
 	align-items: center;
@@ -17,122 +17,25 @@ body {
 	position: relative;
 
 	width: 900px;
-	height: 650px;
+	height: auto;
+	min-height: 500px;
+
+	padding-bottom: 50px;
 
 	box-shadow: 0.5px 0.5px 10px 0.5px rgba(0, 0, 0, 0.2);
-}
 
-.field__game {
-	position: relative;
-	display: block;
-}
-
-.progress-bar {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	flex-flow: row nowrap;
-	gap: 3px;
-}
-
-.progress-bar_active {
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-	background-color: #000;
-}
-
-.progress-bar_passive {
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-	border: 1px solid black;
-}
-
-.start-menu {
-	width: 100%;
-	height: 100%;
-
-	display: flex;
-	flex-flow: column nowrap;
-	align-items: center;
-
-	gap: 50px;
 	background-color: #fff;
 }
 
-.start-menu__header-menu {
-	width: 100%;
-	height: 25%;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	background-color: #6138c7;
-}
-.header-menu__wrapper {
-	display: flex;
-	align-items: center;
-	flex-flow: column nowrap;
-	gap: 10px;
-
-	color: #fff;
-}
-.header-menu__heading {
-}
-.header-menu__description {
-}
-.start-menu__main-menu {
-	width: 100%;
-}
-
-.main-menu__wrapper {
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: space-around;
-	gap: 30px;
-
-	width: 70%;
-	margin: 0 auto;
-}
-
-.main-menu__heading {
-	width: 100%;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-
-	color: purple;
-	font-size: 20px;
-}
-.main-menu__list {
-	display: flex;
-	flex-flow: column nowrap;
-	gap: 30px;
-}
-
-.list-item__wrapper {
-	display: flex;
-	flex-flow: column nowrap;
-}
-
-.main-menu__list-item {
-	display: flex;
-	justify-content: space-between;
-}
-.list-item__heading {
-	color: #000;
-}
-.main-menu__description {
-	color: #000;
-}
-
 @media (max-width: 1024px) {
-	.main-menu__description {
-		display: none;
+	.field {
+		width: 90%;
+	}
+}
+
+@media (max-width: 768px) {
+	.field {
+		width: 100%;
 	}
 }
 
